# opengl_playground

./: .clang-format  CMakeLists.txt
basic_shading/: CMakeLists.txt  main.cpp
basic_shading/shaders/: StandardShading.fragmentshader
common/: CMakeLists.txt
common/include/common/: quaternion_utils.hpp  shader.hpp
common/src/: quaternion_utils.cpp  shader.cpp
fluid/: CMakeLists.txt  main.cpp  origin.js
fluid/shaders/: advection.fs  disturb.fs  divergence.fs  fbo.fs  fbo.vs  multiply.fs  pressure.fs  pressureGradient.fs  screen.fs  screen.vs  vector.vs  vorticity.fs  vorticityForce.fs
fluid2/: CMakeLists.txt  main.cpp
fluid2/shaders/: field.vs  screen.fs
glew/: CMakeLists.txt
glm/: CMakeLists.txt
normal_mapping/: CMakeLists.txt  main.cpp
render2texture/: CMakeLists.txt  main.cpp
